--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,13 @@
     "require": {
         "flarum/core": "^0.1.0-beta.6"
     },
+    "authors": [
+        {
+            "name": "David Coleman",
+            "email": "david@dadiocoleman.com",
+            "github": "https://github.com/dadiocoleman"
+        }
+    ],
     "extra": {
         "branch-alias": {
             "dev-master": "0.1.x-dev"
